fixed broken greeting window on iphone se 2

--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -90,12 +90,16 @@
 	
 	width: 100vw;
 	padding: 0 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
 	.main-wrapper__hello-user {
 		background-color: rgba(0, 0, 0, 0.15);
-		max-width: 800px;
+		width: 800px;
+		min-width: 0px;
 		height: 300px;
-		margin: 0 auto;
+		// margin: auto auto;
 		border-radius: 20px;
 		padding-top: 50px;
 		text-align: center;
@@ -108,9 +112,11 @@
 			0% { opacity: 0; }
 			100% { 
 				opacity: 1;
-				transform: translate(0px, 60%);
+				// transform: translate(0px, 50%);
 			}
 		}
+
+		// @media
 	}
 }
 
